Update and rename airline.html to index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="nav">
             <ul class="navbar">
-                <li><a href="airline.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a>About</a></li>
                 <li><a>Others</a></li>
                 <li><a>Seat</a></li>
